@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id("application")
+    id("me.champeau.jmh") version "0.7.2"
 }
 
 group = "org.togetherjava"
@@ -12,8 +14,19 @@ repositories {
 dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+
+    compileOnly("org.projectlombok:lombok:1.18.36")
+    annotationProcessor("org.projectlombok:lombok:1.18.36")
+}
+
+application {
+    mainClass = "org.togetherjava.aoc.Aoc"
 }
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
 }
